syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/iot/bulbasaur/protos";

message Property {
    PropertyType Type = 1;
    bool Retrievable = 2;
    double StateChangedAt = 11;
    double LastUpdated = 3;

    oneof Parameters {
        FloatPropertyParameters FPParameters = 4;
        BoolPropertyParameters BPParameters = 7;
        EventPropertyParameters EPParameters = 9;
    }

    oneof State {
        FloatPropertyState FPState = 5;
        BoolPropertyState BPState = 8;
        EventPropertyState EPState = 10;
    }

    bool Reportable = 6;
}

message FloatPropertyParameters {
    string instance = 1;
    string unit = 2;
}

message FloatPropertyState {
    string instance = 1;
    double value = 2;
}

message BoolPropertyParameters {
    string instance = 1;
}

message BoolPropertyState {
    string instance = 1;
    bool value = 2;
}

message Event {
    string Value = 1;
    string Name = 2;
}

message EventPropertyParameters {
    string Instance = 1;
    repeated Event Events = 2;
}

message EventPropertyState {
    string Instance = 1;
    string Value = 2;
}

enum PropertyType {
    FloatPropertyType = 0;
    BoolPropertyType = 1;
    EventPropertyType = 2;
}
